@@ -5,6 +5,8 @@
 #ifndef _TEMPLATE_H_
 #define _TEMPLATE_H_
 
+#include <stdbool.h>
+
 struct template_l10n_fields
 {
 	char *language;
@@ -27,12 +29,15 @@ struct template
 
 extern const char *template_fields_list[];
 
+bool load_all_translations(void);
+
 struct template *template_new(const char *tag);
 void template_delete(struct template *t);
 void template_ref(struct template *t);
 void template_deref(struct template *t);
 struct template *template_dup(const struct template *t);
 struct template *template_l10nmerge(struct template *ret, const struct template *t);
+void template_l10nclear(struct template *t);
 struct template *template_load(const char *filename);
 const char *template_lget(const struct template *t, const char *lang, const char *field);
 void template_lset(struct template *t, const char *lang, const char *field, const char *value);
